[gd_scene load_steps=4 format=3 uid="uid://bjq4t472njkn5"]

[ext_resource type="Script" uid="uid://b4h0xvajxrbjx" path="res://scripts/Scripts-NPC/comerciante_alimentos_dialogo.gd" id="1_pd88r"]
[ext_resource type="Texture2D" uid="uid://qdlg4xtoq0hf" path="res://assets/comerciante_alimentos/cenaAlimentos.png" id="2_gj7et"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pd88r"]

[node name="comerciante_alimentos" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pd88r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1536.0
offset_bottom = 1024.0
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_gj7et")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 209.0
offset_top = 30.0
offset_right = 1136.0
offset_bottom = 104.0
theme_override_styles/normal = SubResource("StyleBoxFlat_pd88r")
text = "Eu troco por algo digno da mesa do Nilo..."
justification_flags = 171

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 482.0
offset_right = 1046.0
offset_bottom = 594.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelFeedback" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.031
anchor_bottom = 0.016
offset_left = 377.0
offset_top = -16.0
offset_right = 574.32
offset_bottom = 69.48
scale = Vector2(2.31429, 3.2973)
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
